--- a/StudentMgmtAPI/appsettings.json
+++ b/StudentMgmtAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StudentMgmtAPIContext": "Server=(localdb)\\mssqllocaldb;Database=StudentMgmtAPIContext-8ca43644-1a0e-4c5a-8a77-b6aef01cf3e6;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
